slightly better nav

--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
   <link rel="stylesheet" type="text/css" href="style.css">
   <title>Compound Protocol Network Statuses</title>
 </head>
-<body class="max-width center">
-  <h1>Compound Protocol Network Statuses</h1>
+<body class="max-width min-width center">
   <div id="navigation" class="navigation"></div>
-  <div id="networks-container"></div>
+  <div id="scroll-top" class="scroll-top">^</div>
+  <div class="main">
+    <h1>Compound Protocol Network Statuses</h1>
+    <div id="networks-container"></div>
+  </div>
 </body>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.2.7/dist/web3.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"></script>
